--- a/home.html
+++ b/home.html
@@ -4,34 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <title>notable - home</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="static/favicon.ico">
 </head> 
 <body id="home" >
     <div class="container-fluid" >
         <div class="row" >
-            <div class="col" >
-                <img src="notablelogo.png" class="" id="logo" alt="logo">
-                <div class="col-7 text-center"><h1> a note sharing app for <br /> students</h1> </div >
+            <div class="col home-text" >
+                <img src="static/notablelogo.png" id="logo" alt="logo">
+                <div class="col-7 text-center"><h1>a note sharing app for students</h1></div >
                 <div class="row" >
-                    <div class="pt-5 col-sm text-center" > <button type="button" class="btn btn-light" onclick="location.href = 'browse.html';" >browse</button ></div >
-                    <div class="pt-5 col-sm text-center" > <button type="button" class="btn btn-light" onclick="location.href = 'upload.html';" >upload</button ></div >
-                </div >
+                    <div class="pt-5 col-sm text-center" > <button type="button" class="btn btn-light" onclick="location.href = 'browse';" >browse</button ></div >
+                    <div class="pt-5 col-sm text-center" > <button type="button" class="btn btn-light" onclick="location.href = 'upload';" >upload</button ></div >
+                </div>
             </div>
             <div class="col" >
-                <img src="homenotes.jpg" class="img-rounded" id="notes" alt="school notes">
+                <img src="static/homenotes.jpg" class="img-rounded" id="notes" alt="school notes">
             </div>
         </div >
     </div >
-    <br><br><br><br><br><br><br><br>
     <section id="description" class="text-center">
         <h1>our mission</h1>
-        <p>kjdhfaklsdjfhlksdfhlkashdfklasjhdfkashdfkasdhfsa</p>
+        <p class="pr-5 pl-5">Have you ever missed a class and never been able to catch up with the lesson?</p>
+        <p class="pr-5 pl-5">Have you ever forgotten to write down a vital part of your notes and failed your test?</p> 
+        <p class="pr-5 pl-5">Have you ever felt compelled to share your notes and support other students?</p>
+        <p class="pr-5 pl-5">Notable is for you! Our tool helps students like yourself study harder and earn better marks. With thousands of note packages in our database, you can find notes for anything you need to succeed, all shared by real students! Filter by subject, unit, grade level, and format to fidn the perfect set of notes for you.</p>
     </section>
 </body >
 
-<footer class="text-center text-lg-start bg-light">
+<footer class="text-center text-lg-start bg-light pt-3">
     <section class="">
         <div class="container text-center text-md-start mt-5">
             <div class="row mt-3">
