--- a/home.html
+++ b/home.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/base.min.css">
     <title>notable - home</title>
-    <link rel="icon" href="static/favicon.ico">
+    <link rel="icon" href="static/favicon.ico" />
 </head> 
 <body id="home" >
     <div class="container-fluid" >
         <div class="row" >
             <div class="col home-text" >
                 <img src="static/notablelogo.png" id="logo" alt="logo">
-                <div class="col-7 text-center"><h1>a note sharing app for students</h1></div >
+                <div class="px-3 text-center"><h1>a note sharing app for students</h1></div >
                 <div class="row" >
                     <div class="pt-5 col-sm text-center" > <button type="button" class="btn btn-light" onclick="location.href = 'browse';" >browse</button ></div >
                     <div class="pt-5 col-sm text-center" > <button type="button" class="btn btn-light" onclick="location.href = 'upload';" >upload</button ></div >
@@ -26,37 +27,103 @@
     </div >
     <section id="description" class="text-center">
         <h1>our mission</h1>
-        <p class="pr-5 pl-5">Have you ever missed a class and never been able to catch up with the lesson?</p>
-        <p class="pr-5 pl-5">Have you ever forgotten to write down a vital part of your notes and failed your test?</p> 
-        <p class="pr-5 pl-5">Have you ever felt compelled to share your notes and support other students?</p>
-        <p class="pr-5 pl-5">Notable is for you! Our tool helps students like yourself study harder and earn better marks. With thousands of note packages in our database, you can find notes for anything you need to succeed, all shared by real students! Filter by subject, unit, grade level, and format to fidn the perfect set of notes for you.</p>
+        <span></span>
+        <p>have you ever missed a class and never been able to catch up with the lesson? <br>
+        have you ever fogotten a vital part of your notes and failed a test? <br>
+        have you ever felt compelled to share your notes with other students?</p>
+        <span></span>
+        <p>If so, Notable is for you! Our tool helps students like yourself study harder and earn better marks. With over 1000 note packages in our database, you can find the notes for anything you need to succeed! Filter by subject, unit, grade level, and format to find the perfect set of notes for you.</p>
     </section>
-</body >
 
-<footer class="text-center text-lg-start bg-light pt-3">
-    <section class="">
-        <div class="container text-center text-md-start mt-5">
-            <div class="row mt-3">
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">links</h6>
-                    <p><a href="#!" class="text-reset">GitHub</a></p>
-                    <p><a href="#!" class="text-reset">DevPost</a></p>
-                    <p><a href="#!" class="text-reset">LinkedIn</a></p>
+    <section id="carousel">
+        <div class="slider">
+            <div class="slide-track">
+                <div class="slide">
+                    <img class="carousel-img" src="static/biology.png"/>
                 </div>
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">contact us!</h6>
-                    <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-                    <p><i class="fas fa-envelope me-3"></i>notable@gmail.com</p>
-                    <p><i class="fas fa-phone me-3"></i>+ 01 234 567 8888</p>
-                </div>                
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">about</h6>
-                    <p><a href="#!" class="text-reset">terms</a></p>
-                    <p><a href="#!" class="text-reset">privacy</a></p>
-                    <p><a href="#!" class="text-reset">settings</a></p>
+                <div class="slide">
+                    <img class="carousel-img" src="static/homenotes.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/genderstudies.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/genetics.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/macro.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/periodictable.png"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/pollution.png"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/prokaryoticdiversity.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/1812.png"/>
+                </div>
+
+
+
+                <div class="slide">
+                    <img class="carousel-img" src="static/biology.png"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/homenotes.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/genderstudies.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/genetics.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/macro.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/periodictable.png"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/pollution.png"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/prokaryoticdiversity.jpg"/>
+                </div>
+                <div class="slide">
+                    <img class="carousel-img" src="static/1812.png"/>
                 </div>
             </div>
         </div>
     </section>
-</footer>
+
+    <footer class="text-center text-lg-start bg-light">
+        <section class="">
+            <div class="container text-center text-md-start">
+                <div class="row pt-5 pb-3">
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">links</h6>
+                        <p><a href="#!" class="text-reset">GitHub</a></p>
+                        <p><a href="#!" class="text-reset">DevPost</a></p>
+                        <p><a href="#!" class="text-reset">LinkedIn</a></p>
+                    </div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">contact us!</h6>
+                        <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                        <p><i class="fas fa-envelope me-3"></i>notable@gmail.com</p>
+                        <p><i class="fas fa-phone me-3"></i>+ 01 234 567 8888</p>
+                    </div>                
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">about</h6>
+                        <p><a href="#!" class="text-reset">terms</a></p>
+                        <p><a href="#!" class="text-reset">privacy</a></p>
+                        <p><a href="#!" class="text-reset">settings</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
+</body>
 </html >
