--- a/home.html
+++ b/home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="../static/css/base.min.css">
     <title>notable - home</title>
     <link rel="icon" href="static/favicon.ico" />
 </head> 
@@ -105,7 +104,7 @@
                 <div class="row pt-5 pb-3">
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <h6 class="text-uppercase fw-bold mb-4">links</h6>
-                        <p><a href="#!" class="text-reset">GitHub</a></p>
+                        <p><a href="https://github.com/gracetxgao/notable.git" class="text-reset">GitHub</a></p>
                         <p><a href="#!" class="text-reset">DevPost</a></p>
                         <p><a href="#!" class="text-reset">LinkedIn</a></p>
                     </div>
